fixes layout issue

--- a/wp-content/themes/paceaux3/src/styles/41-entry-content.css
+++ b/wp-content/themes/paceaux3/src/styles/41-entry-content.css
@@ -6,7 +6,7 @@
     --entryBoxPadding: 0.618rem;
     --entryBoxMarginVertical: 1.618em;
 
-    container-type: size;
+    container-type: inline-size;
     container-name: blog-post;
 }
 
